fix: reduce image stretching

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -366,7 +366,8 @@ header {
     grid-template:
       "primary primary" 70%
       "secondary tertiary" 30% / 1fr auto;
-    height: 100vh;
+    max-height: 100vh;
+
     overflow: hidden;
   }
 
